--- a/etc/X11/xorg.conf.d/xorg.conf
+++ b/etc/X11/xorg.conf.d/xorg.conf
@@ -5,6 +5,30 @@ Section "Device"
 #       Option "AccelMethod" "uxa"
 EndSection
 Section "Monitor"
+        Identifier "DP-1"
+        Option "Ignore" "True"
+EndSection
+Section "Monitor"
+        Identifier "DP-3"
+        Option "Ignore" "True"
+EndSection
+Section "Monitor"
+        Identifier "DP-4"
+        Option "Ignore" "True"
+EndSection
+Section "Monitor"
+        Identifier "HDMI-1"
+        Option "Ignore" "True"
+EndSection
+Section "Monitor"
         Identifier "HDMI-2"
+        Option "Ignore" "True"
+EndSection
+Section "Monitor"
+        Identifier "HDMI-3"
+        Option "Ignore" "True"
+EndSection
+Section "Monitor"
+        Identifier "HDMI-4"
         Option "Ignore" "True"
 EndSection
