--- a/etc/X11/xorg.conf.d/xorg.conf
+++ b/etc/X11/xorg.conf.d/xorg.conf
@@ -4,6 +4,9 @@ Section "Device"
         Option "TearFree" "true"
 #       Option "AccelMethod" "uxa"
 EndSection
+Section "ServerFlags"
+        Option "DontVTSwitch" "true"
+EndSection
 Section "Monitor"
         Identifier "DP-1"
         Option "Ignore" "True"
